<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:cardCornerRadius="30dp"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_img_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_plus"
                android:rotation="45"
                android:layout_gravity="end"
                android:layout_margin="30dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_edit_user_dialog"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:fontFamily="serif"
                android:layout_gravity="center"
                />

            <TextView
                style="@style/style_dialog_label"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/id_input_firstname"
                style="@style/style_input_box"
                android:autofillHints="name"
                tools:ignore="LabelFor" />


            <TextView
                style="@style/style_dialog_label"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/id_input_lastname"
                style="@style/style_input_box"
                android:autofillHints="name"
                tools:ignore="LabelFor" />


            <TextView
                style="@style/style_dialog_label"
                android:text="@string/email" />

            <EditText
                android:id="@+id/id_input_email"
                style="@style/style_input_box"
                android:inputType="textEmailAddress"
                android:autofillHints="name"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/id_button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/gray"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="30dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>