<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_margin="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/id_img_avtar"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/id_text_first_last_name"
                style="@style/raw_remote_style"
                android:text="@string/first_last_name"
                app:layout_constraintStart_toEndOf="@+id/id_img_avtar"
                app:layout_constraintTop_toTopOf="@+id/id_img_avtar" />


            <TextView
                android:id="@+id/id_text_email"
                style="@style/raw_remote_style"
                android:text="@string/email"
                app:layout_constraintBottom_toBottomOf="@+id/id_img_avtar"
                app:layout_constraintStart_toEndOf="@+id/id_img_avtar"
                app:layout_constraintTop_toTopOf="@+id/id_img_avtar" />

            <TextView
                android:id="@+id/id_text_id"
                style="@style/raw_remote_style"
                android:text="@string/id"
                app:layout_constraintBottom_toBottomOf="@+id/id_img_avtar"
                app:layout_constraintStart_toEndOf="@+id/id_img_avtar" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>