<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_margin="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/id_text_first_last_name"
                style="@style/raw_remote_style"
                android:layout_marginTop="30dp"
                android:text="@string/first_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/id_text_email"
                style="@style/raw_remote_style"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_text_first_last_name" />

            <TextView
                android:id="@+id/id_text_id"
                style="@style/raw_remote_style"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/id"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_text_email" />

            <ImageView
                android:id="@+id/id_img_edit"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_edit"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/id_img_delete"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_delete"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_img_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>